--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -68,10 +68,10 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
         script: |
           # Выполняет pull образа с DockerHub
-          sudo docker pull denchik79/yamdb_final:latest
+          sudo docker pull denchik79/yamdb_final
           #остановка всех контейнеров
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 denchik79/yamdb_final:latest
+          sudo docker run --rm -d -p 5000:5000 denchik79/yamdb_final
   
   send_message:
     runs-on: ubuntu-latest
