--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -54,6 +54,8 @@ jobs:
         with:
           push: true
           tags: denchik79/yamdb_final:latest 
+          file: api_yamdb/Dockerfile 
+          
 
   deploy:
     runs-on: ubuntu-latest
