--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,10 @@ jobs:
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort==5.0.0
         # установка зависимостей
         pip install -r api_yamdb/requirements.txt 
+
+    - name: Test with pytest
+      run: pytest    
+
     - name: Test with flake8 and django tests
       run: |
         # запуск проверки проекта по flake8
